# cltemplate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: quickstart.yml  rust.yml
example/: say_hello.sh  template.txt
src/: error.rs  main.rs
