[package]
name = "cltemplate"
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["HyperCodec"]
readme = "README.md"
description = "A simple CLI tool for creating and using templates"
homepage = "https://github.com/inflectrix/cltemplate"
repository = "https://github.com/inflectrix/cltemplate"
keywords = ["cli", "template"]
categories = ["command-line-utilities"]
default-run = "template"

exclude = [
    "/example/",
    "/testing/",
]

[[bin]]
name = "template"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.10", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = { version = "0.17.7", features = ["tokio", "rayon"] }
lazy_static = "1.4.0"
regex = "1.10.2"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
